@@ -1,3 +1,11 @@
+2004-02-28  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	PR bootstrap/7087
+	* Makefile.tpl: Guard XFOO sed statements better.
+	* Makefile.tpl: Add dependency for configure-target-libada.
+	* Makefile.in: Regenerate (incidentally fixes broken
+	commit when libada-branch was merged).
+
 2004-02-28  Andrew Cagney  <cagney@redhat.com>
 
 	* src-release (CVS_NAMES): Define.
